--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx3G -Dmixin.debug=true -Dmixin.debug.export=true
+
 org.gradle.daemon=false
 
 parch_mapping=2023.06.26
